fixing bg image not showing on deployment

--- a/src/component/footer/index.styles.scss
+++ b/src/component/footer/index.styles.scss
@@ -26,3 +26,12 @@
   height: 100%;
   display: flex;
 }
+
+.footer__links {
+  display: flex;
+  gap: 1rem;
+
+  svg {
+    font-size: 1.5rem;
+  }
+}
